tests/init_state/ref_obligations/drop_of_ref_with_unfulfilled_obligation.err.expected
error: at 7:5: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation here (is_init=false, ends_init=true)
   |
 7 |     drop r;
   |     ^^^^^^
